--- a/styles/style.css
+++ b/styles/style.css
@@ -3,14 +3,30 @@ body {
 
 }
 
+#logo {
+    width: 200px;
+    margin: 20px 0 40px 0;
+}
+
 .menu-navegation {
     width: 230px;
     height: 100vh;
     background-color: purple;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content {
     width: 1050px;
     height: 100vh;
     background-color: #e4e4e4;
+}
+
+.item-menu-nav, a {
+    color: #FFF;
+    text-decoration: none;
+    font-size: 1em;
+    font-family: 'Oswald', sans-serif;
+    padding: 15px;
 }
