--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,14 @@ body {
 .item-menu-nav, a {
     color: #FFF;
     text-decoration: none;
-    font-size: 1em;
+    font-size: 0.9em;
     font-family: 'Oswald', sans-serif;
-    padding: 15px;
+    padding: 10px;
+    display: flex;    
+    align-items: center;
+}
+
+.ico-nav {
+    height: 35px;
+    width: 35px;
 }
