--- a/styles/style.css
+++ b/styles/style.css
@@ -1,50 +1,53 @@
 body {
-    display: flex;
-
+    display: flex;    
+    font-family: 'Overpass', sans-serif;
 }
 
 #logo {
-    width: 200px;
-    margin: 20px 0 40px 0;
+    width: 180px;
+    margin: 25px 25px 0 25px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #fff;
 }
 
-.menu-navegation {
-    width: 230px;
-    height: 100vh;
+.menu {
     background-color: purple;
+    height: 100vh;
+    width: 230px;
+    display: flex;
+    flex-direction: column;
+}
+
+#menu-nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 5px;
+    margin-top: 30px;
 }
 
-.content {
-    width: 1050px;
-    height: 100vh;
-    background-color: #e4e4e4;
-}
-
-.item-menu-nav {    
-    display: flex;  
-    align-items: center;  
-    width: 200px;
-    height: 45px;
-    padding: 0 15px;    
-    font-size: 0.85em;    
-    font-family: 'Oswald', sans-serif;
+.item-menu-nav {
+    padding: 0 18px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    height: 35px;
+    width: 160px;
+    display: flex;
+    align-items: center;
     cursor: pointer;
+    gap: 5px;
 }
 
 .item-menu-nav:hover {
-    background-color: #e4e4e4;
+    background-color: rgb(135, 68, 155);
 }
 
 .item-menu-nav a {
-    color: #FFF;
+    color: #fff;
     text-decoration: none;
-    padding: 10px;
 }
 
 .ico-nav {
-    height: 30px;
-    width: 30px;
+    width: 26px;
+    margin-right: 10px;
 }
