--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,8 +1,3 @@
-body {
-    display: flex;    
-    font-family: 'Overpass', sans-serif;
-}
-
 #logo {
     width: 180px;
     margin-top: 30px;
@@ -50,7 +45,7 @@ body {
     margin-right: 10px;
 }
 
-#line-menu {
+.line-menu {
     border-top: 0.5px solid #fff;
     width: 200px;
     margin: 30px 0 30px 0;
