--- a/styles/general.css
+++ b/styles/general.css
@@ -7,5 +7,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 230px;
+}
+
+footer {
+    height: 100px;
 }
 
