--- a/styles/menu.css
+++ b/styles/menu.css
@@ -10,7 +10,8 @@
     width: 230px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;    
+    position: fixed;
 }
 
 #menu-nav {
